# vigia

./: .gitignore  AGENTS.md  LICENSE  README.md  VIGIA_DOCS.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/models/: __init__.py  alert.py  reading.py  region.py  user.py
app/routers/: alerts.py  health.py  regions.py
app/schemas/: alert.py  region.py  user.py
data/: regions_pe.geojson
migrations/: env.py
migrations/versions/: c22cada24ecf_create_regions_readings_alerts_users_.py
scripts/: seed_regions.py
tests/: conftest.py  test_alerts_api.py  test_config.py  test_main.py  test_migrations.py  test_models.py  test_project_structure.py  test_routers_integration.py  test_schemas.py  test_schemas_validation.py  test_seed_regions.py
